# companies_house

./: analysis.ipynb  pyproject.toml
companies_house/: __init__.py  companies_house.py  company_ownership.py
